- Split the navigation CSS from the main CSS - Fix the responsive design navigation on mobile - Clean some CSS - Move the buttons on the second toolbar when we switch to mobile

--- a/app/widgets/Roster/roster.css
+++ b/app/widgets/Roster/roster.css
@@ -258,159 +258,6 @@
     display: list-item;
 }
 
-/*
-#roster ul#rosterlist ul.contact li:not(:first-child) {
-    display: none;
-}
-
-#roster ul#rosterlist ul.contact li:first-child {
-    display: list-item;
-}
-* */
-/*
-#roster ul#rosterlist li:nth-child(2n) {
-    background-color: rgba(255, 255, 255, 0.03);
-}
-
-#roster ul#rosterlist li img {
-    float: left;
-    width: 3em;
-    height: 3em;
-    margin-right: 0.5em;
-    margin-top: -0.5em;
-}
-
-#roster ul#rosterlist li a {
-    display: block;
-    white-space: nowrap;
-    width: auto;
-    overflow: hidden;
-    color: #BBB;
-    font-size: 1em;
-    padding-top: 0.5em;
-    text-overflow: ellipsis;
-    vertical-align: text-bottom;
-    text-decoration: none;
-
-    text-shadow: 0px -0.1em 0px rgba(0, 0, 0, 0.5);
-}
-
-#roster ul#rosterlist li a span.ressource {
-    font-size: 0.8em;
-    color: #777;
-}
-
-#roster ul#rosterlist h1 {
-    padding: 1em;
-    color: #777;
-    line-height: 1em;
-    font-size: 1em;
-
-    text-shadow: 0px -0.1em 0px rgba(0, 0, 0, 0.5);
-}
-
-#roster ul#rosterlist h1:hover {
-    cursor: pointer;
-}
-
-#roster ul#rosterlist h1:before {
-    content: "+";
-    width: 20px;
-    padding-right: 5px;
-    display: inline-block;
-    text-align: center;
-}
-
-#roster ul#rosterlist div.groupshown h1:before {
-    content: "-";
-}
-
-#roster ul#rosterlist li .chat {
-    width: 0.5em;
-    height: 3em;
-    float: right;
-    background-color: #DDD;
-    transition: width 0.5s ease;
-}
-
-#roster ul#rosterlist li.inactive {
-    opacity: 0.5;
-}
-
-#roster ul#rosterlist li:hover .chat {
-    width: 3em;
-    background-image: url(img/bubbles.svg);
-    background-size: 1.3em 1.3em;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-#roster ul#rosterlist li .chat.on:hover {
-    cursor: pointer;
-}
-
-#roster ul#rosterlist li.online .chat {
-    background-color: #6FCC43;
-}
-
-#roster ul#rosterlist li.away .chat {
-    background-color: #FFE433;
-}
-
-#roster ul#rosterlist li.dnd .chat {
-    background-color: #D92727;
-}
-
-#roster ul#rosterlist li.xa .chat {
-    background-color: #442178;
-}
-
-#roster ul#rosterlist li.server_error .chat {
-    background-color: #000;
-}
-
-#roster ul#rosterlist li:hover, #roster ul li.active {
-    background-color: black;
-}
-
-#roster ul#rosterlist li.focused {
-    background-color: #555;
-}
-
-#roster li .infoicon {
-    width: 1.4em;
-    height: 1.4em;
-    background-size: 1.3em 1.3em;
-    background-repeat: no-repeat;
-    float: right;
-    margin-top: 0.8em;
-    margin-right: 0.2em;
-}
-
-#roster li .mobile {
-    background-image: url('img/mobile.svg');
-}
-
-#roster li .web {
-    background-image: url('img/earth.svg');
-}
-
-#roster li .bot {
-    background-image: url('img/robot.png');
-}
-
-#roster li .tune {
-    background-image: url('img/music.svg');
-}
-
-#roster li .jingle {
-    background-image: url('img/call.svg');
-}
-
-#roster li .jingle:hover {
-    cursor: pointer;
-}
-*/
 #rostermenu {
     position: fixed;
     bottom: 0px;
@@ -423,7 +270,7 @@
 }
 
 
-#rostermenu li:last-child {
+#rostermenu li:nth-last-child(-n+3) {
     float: right;
 }
 
