--- a/themes/movim/css/style.css
+++ b/themes/movim/css/style.css
@@ -65,11 +65,6 @@ body {
     background-attachment:fixed;
 }
 
-/* We hide all the mobiles elements */
-.on_mobile {
-    display: none;
-}
-
 /* Background pattern */
 .default {
     background-image: radial-gradient(center
@@ -374,141 +369,6 @@ ul.clean li {
 
 #content > footer a:link, #content > footer a:visited {
     color: #BBB;
-}
-
-/* The navigation bar */
-
-nav {
-    margin: 0px;
-    padding: 0px;
-    padding-top: 0px;
-    text-decoration: none;
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
-    
-    background-color: #4C5A61;
-
-	animation: 200s infinite colorful;
-    -webkit-animation: 200s infinite colorful;
-}
-
-nav .wrapper {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.menu {
-    /*max-width: 1280px;*/
-    width: 100%;
-    margin: 0px auto;
-    list-style-type: none;
-    height: 3em;
-    overflow: hidden;
-}
-
-.menu li {
-    float: left;
-
-}
-
-.menu li input[type=checkbox] {
-    display: none;
-}
-
-.menu li a:not(.button), .menu li label {
-    line-height: 3em;
-    display: block;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 16px 16px;
-    height: 0px;
-    width: 0px;
-    padding: 1.5em;
-    color: transparent;
-}
-
-.menu li a.disconnect{
-    position: fixed;
-    top: 0px;
-    right: 200px;
-}
-
-.menu li:hover,
-.menu li a.disconnect:hover {
-    /*background-color: #46565E;*/
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.menu li a.active {
-    background-color: rgba(0, 0, 0, 0.2);
-    /*background-color: #445157;*/
-}
-
-.menu li img {
-    float: left;
-    border: 0px;
-    margin-right: 10px;
-    margin-top: 1px;
-}
-.menu li:hover a, .menu li label:hover {
-    cursor: pointer;
-} 
-
-.menu li a.main, .menu li a.main.active {
-	width: 200px;
-    padding: 1.5em;
-    color: transparent;
-    background-image: url(../img/logo.png);
-    background-repeat: no-repeat;
-    background-size: auto auto;
-    background-position: center center;
-    
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-}
-
-.menu li .discover,
-.menu li .explore   { background-image: url(../img/icons/menu/globe.svg); }
-.menu li .profile   { background-image: url(../img/icons/menu/user.svg); }
-.menu li .conf      { background-image: url(../img/icons/menu/settings.svg); }
-.menu li .help      { background-image: url(../img/icons/menu/support.svg); }
-.menu li .disconnect{ background-image: url(../img/icons/menu/exit.svg); }
-.menu li .down      { background-image: url(../img/icons/menu/list.svg); }
-.menu li .up        { background-image: url(../img/icons/menu/upload.svg); }
-.menu li .plus      { background-image: url(../img/icons/menu/plus.svg); }
-.menu li .search    { background-image: url(../img/icons/menu/search.svg); }
-.menu li .users, 
-.menu li .account   { background-image: url(../img/icons/menu/users.svg); }
-.menu li .expand    { background-image: url(../img/icons/menu/expand.svg); }
-.menu li .contract  { background-image: url(../img/icons/menu/contract.svg); }
-.menu li .media     { background-image: url(../img/icons/menu/folder.svg); }
-.menu li .blog      { background-image: url(../img/icons/menu/quill.svg); }
-.menu li .admin     { background-image: url(../img/icons/menu/admin.svg); }
-.menu li .about     { background-image: url(../img/icons/menu/info.svg); }
-.menu li .news      { background-image: url(../img/icons/menu/news.svg); }
-
-ul li .tabbed {
-    background-color: rgba(36, 36, 36, 1);
-    position: absolute;
-    bottom: 3em;
-    right: -100%;
-    width: 100%;
-    transition: right 0.5s ease;
-}
-
-ul li .tabbed label {
-    display: none;
-}
-
-ul li .tabbed .element {
-    min-height: 0px;
-}
-
-ul li input[type=checkbox]:checked ~ .tabbed {
-    right: 0%;
 }
 
 /* Warning */
